<resources>
    <string name="app_name">Family Map</string>

    <!-- Field Names -->
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="password">Password:</string>
    <string name="userName">User Name:</string>
    <string name="emailAddress">Email:</string>
    <string name="gender">Gender:</string>
    <string name="MapFragment">Click on a Marker to see Event Details</string>
    <!-- Button Names -->
    <string name="radiomale">Male</string>
    <string name="radiofemale">Female</string>
    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="PersonName">First Name</string>
    <string name="PersonLastName">Last Name</string>
    <string name="PersonGender">Gender</string>
    <string name="EventTitle">Life Events</string>
    <string name="FamilyTitle">Family Members</string>
    <string name="PersonGenderBox">Gender</string>
    <string name="PersonLastNameBox">Last Name</string>
    <string name="PersonNameBox">First Name</string>
    <string name="fileMenu">File</string>
    <string name="LifeStoryLines">Life Story Lines</string>
    <string name="FamilyTreeLines">Family Tree Lines</string>
    <string name="LifeStoryLinesExplanation">Show Life Story Lines</string>
    <string name="FamilyTreeLinesExplanation">Show Family Tree Lines</string>
    <string name="SpouseLines">Spouse Lines</string>
    <string name="SpouseLinesExplanation">Show Spouse Lines</string>
    <string name="GenderEventsExplanation">Filter Events Based on Gender</string>
    <string name="FemaleEvents">Female Events</string>
    <string name="MaleEvents">Male Events</string>
    <string name="MothersSideExplanation">Filter by Mother\'s Side of Family</string>
    <string name="MothersSide">Mother\'s Side</string>
    <string name="FathersSideExplanation">Filter by Father\'s Side of Family</string>
    <string name="FathersSide">Father\'s Side</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="LogoutExplanation">Return to Login Screen</string>
</resources>
